force-app/main/default/objects/Technical_Request__c/fields/Monarch_Accessory_Color_Selection__c.field-meta.xml
<CustomField>
    <fullName>Monarch_Accessory_Color_Selection__c</fullName>
    <inlineHelpText>Select Color for Replacement Shell and Battery Access Panel</inlineHelpText>
    <label>Monarch Accessory Color Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>