force-app/main/default/objects/Technical_Request__c/fields/Name_and_Title_of_site_contact__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Title_of_site_contact__c</fullName>
    <label>Name and Title of site contact</label>
    <type>TextArea</type>
</CustomField>