force-app/main/default/objects/Technical_Request__c/fields/Notes_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Comments__c</fullName>
    <description>Free text space to enter notes and comments about the proposal created</description>
    <inlineHelpText>Free text space to enter notes and comments about the proposal created</inlineHelpText>
    <label>Notes and Comments</label>
    <type>TextArea</type>
</CustomField>