force-app/main/default/objects/Technical_Request__c/fields/Onsite_Serial_Numbers_to_be_quoted__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Serial_Numbers_to_be_quoted__c</fullName>
    <label>Onsite Serial Numbers  to be quoted</label>
    <type>TextArea</type>
</CustomField>