force-app/main/default/objects/Technical_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up the Opportunity the AE created for the deal</description>
    <inlineHelpText>Look up the opportunity you created for this capital protection request.</inlineHelpText>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Acute_Care_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Request Forms</relationshipLabel>
    <relationshipName>Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>