force-app/main/default/objects/Technical_Request__c/fields/Order_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Reason__c</fullName>
    <description>Options for why the Order Status was chosen in the Support Request Type field.</description>
    <inlineHelpText>Choose the option(s) that best explains your Order Status request.</inlineHelpText>
    <label>Order Status Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H2H</fullName>
            </value>
            <value>
                <fullName>Priority Status</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Prior Auth Required (PAR)</fullName>
            </value>
            <value>
                <fullName>VisiVest/VisiView</fullName>
            </value>
            <value>
                <fullName>Order Pad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>