force-app/main/default/objects/Technical_Request__c/fields/Patient_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Patient_Date_of_Birth__c</fullName>
    <inlineHelpText>Must enter either Patient Date of Birth or Patient TIMS#.</inlineHelpText>
    <label>Patient Date of Birth</label>
    <type>Date</type>
</CustomField>