force-app/main/default/objects/Technical_Request__c/fields/Patient_JDE_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_JDE_Number__c</fullName>
    <description>20161205- Doug Lecher/Cherie Peterson although this is labeled as JDE Number it should now be pulling TIMS</description>
    <formula>IF(Account__c = null, Patient_Name__r.TiMS_ID__c, Account__r.TiMS_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient JDE Number</label>
    <type>Text</type>
</CustomField>