force-app/main/default/objects/Technical_Request__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.JDE_Record_Type__c</field>
            <operation>equals</operation>
            <value>PAT</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Request Forms (Patient Name)</relationshipLabel>
    <relationshipName>Request_Forms3</relationshipName>
    <type>Lookup</type>
</CustomField>