force-app/main/default/objects/Technical_Request__c/fields/Patient_TIMS__c.field-meta.xml
<CustomField>
    <fullName>Patient_TIMS__c</fullName>
    <inlineHelpText>Must enter either patient date of birth or patient TIMS#.</inlineHelpText>
    <label>Patient TIMS #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>