force-app/main/default/objects/Technical_Request__c/fields/Payment_1_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_1_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill to Insurance</fullName>
            </value>
            <value>
                <fullName>Bill to Credit Card</fullName>
            </value>
            <value>
                <fullName>Warranty N/C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>