force-app/main/default/objects/Technical_Request__c/fields/Phone_Call_Requested__c.field-meta.xml
<CustomField>
    <fullName>Phone_Call_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate a call to the RC AE with the resolution to the Sales Support Request is needed.</description>
    <inlineHelpText>Check this box if you would like a call from the Sales Support Team with the completion/resolution of your request, in addition to the email response.</inlineHelpText>
    <label>Phone Call Requested</label>
    <type>Checkbox</type>
</CustomField>