force-app/main/default/objects/Technical_Request__c/fields/Price_of_third_item_to_be_quoted__c.field-meta.xml
<CustomField>
    <fullName>Price_of_third_item_to_be_quoted__c</fullName>
    <label>Price of third item to be quoted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>