force-app/main/default/objects/Technical_Request__c/fields/Proposal_SP_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposal_SP_Number__c</fullName>
    <description>Enter the JDE generated Proposal Number</description>
    <label>Proposal (SP) Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>