force-app/main/default/objects/Technical_Request__c/fields/Quantity_of_2nd_type_of_equipment__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_2nd_type_of_equipment__c</fullName>
    <label>Quantity of 2nd type of equipment</label>
    <length>2</length>
    <type>Text</type>
</CustomField>