force-app/main/default/objects/Technical_Request__c/fields/Quantity_of_3rd_type_of_equipment__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_3rd_type_of_equipment__c</fullName>
    <label>Quantity of 3rd type of equipment</label>
    <length>3</length>
    <type>Text</type>
</CustomField>