force-app/main/default/objects/Technical_Request__c/fields/Quantity_of_Circuits__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Circuits__c</fullName>
    <inlineHelpText>Enter number of circuits requested (1-10).</inlineHelpText>
    <label>Quantity of Circuits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>