force-app/main/default/objects/Technical_Request__c/fields/Quantity_of_Filters__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Filters__c</fullName>
    <inlineHelpText>Enter number of filters requested (1-10).</inlineHelpText>
    <label>Quantity of Filters</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>