force-app/main/default/objects/Technical_Request__c/fields/Quantity_of_Mouthpieces__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Mouthpieces__c</fullName>
    <inlineHelpText>Enter number of mouthpieces requested (1-10).</inlineHelpText>
    <label>Quantity of Mouthpieces</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>