force-app/main/default/objects/Technical_Request__c/fields/Ready_to_Execute__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Execute__c</fullName>
    <description>This field is created as part of CR00030146</description>
    <label>Ready to Execute</label>
    <type>Date</type>
</CustomField>