force-app/main/default/objects/Technical_Request__c/fields/Reason_for_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Replacement__c</fullName>
    <description>This is where the user will document why a replacement part was needed.</description>
    <inlineHelpText>This is where the user will document why a replacement part was needed.</inlineHelpText>
    <label>Reason for Replacement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>