force-app/main/default/objects/Technical_Request__c/fields/Recipient_Address__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address__c</fullName>
    <label>Recipient Address</label>
    <type>TextArea</type>
</CustomField>