force-app/main/default/objects/Technical_Request__c/fields/Recipient_of_Letter_including_Title__c.field-meta.xml
<CustomField>
    <fullName>Recipient_of_Letter_including_Title__c</fullName>
    <label>Recipient of Letter including Title</label>
    <type>TextArea</type>
</CustomField>