force-app/main/default/objects/Technical_Request__c/fields/Regional_Director_Name__c.field-meta.xml
<CustomField>
    <fullName>Regional_Director_Name__c</fullName>
    <description>Regional Director assigned to the Account</description>
    <inlineHelpText>Enter the first and last name of the Regional Director for the Account</inlineHelpText>
    <label>Regional Director Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>