force-app/main/default/objects/Technical_Request__c/fields/Replacement_Generator__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Generator__c</fullName>
    <label>Replacement Device</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Model 105</fullName>
                <label>Vest Model 105</label>
            </value>
            <value>
                <fullName>Monarch</fullName>
            </value>
            <value>
                <fullName>Volara</fullName>
            </value>
            <value>
                <fullName>VitalCough</fullName>
            </value>
            <value>
                <fullName>Life2000 Compressor</fullName>
            </value>
            <value>
                <fullName>Life2000 Ventilator</fullName>
            </value>
            <value>
                <fullName>Synclara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>