force-app/main/default/objects/Technical_Request__c/fields/Replacement_Supplies_Needed__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Supplies_Needed__c</fullName>
    <description>Created as a part of CR00032524</description>
    <label>Replacement Supplies Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life2000 Compressor</fullName>
            </value>
            <value>
                <fullName>Life2000 Ventilator</fullName>
            </value>
            <value>
                <fullName>Life2000 Interface (list size needed in Additional Comments)</fullName>
            </value>
            <value>
                <fullName>COMBO2 Air &amp; Oxygen Hose (20 feet)</fullName>
            </value>
            <value>
                <fullName>Oxygen Inlet Hose (6 Feet)</fullName>
            </value>
            <value>
                <fullName>Compressor Filter Package</fullName>
            </value>
            <value>
                <fullName>Universal Circuit Connector</fullName>
            </value>
            <value>
                <fullName>Nasal Sizing Guide</fullName>
            </value>
            <value>
                <fullName>O2 Adapter</fullName>
            </value>
            <value>
                <fullName>PM Stickers</fullName>
            </value>
            <value>
                <fullName>Vest Device</fullName>
            </value>
            <value>
                <fullName>Disposable Garment (list size needed in Additional Comments)</fullName>
            </value>
            <value>
                <fullName>Synclara Device</fullName>
            </value>
            <value>
                <fullName>Synclara Mask (list size needed in Additional Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>