force-app/main/default/objects/Technical_Request__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <description>Details surrounding the Sales Support Request</description>
    <inlineHelpText>Please provide detailed information to resolve your request.</inlineHelpText>
    <label>Request Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>