force-app/main/default/objects/Technical_Request__c/fields/Request_Response__c.field-meta.xml
<CustomField>
    <fullName>Request_Response__c</fullName>
    <description>Sales Support Response to the Sales Support Inquiry/Request</description>
    <inlineHelpText>Sales Support&apos;s response to the Account Executive request.</inlineHelpText>
    <label>Request Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>