force-app/main/default/objects/Technical_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Designate if request is for a patient use (Home Care), or for Account Executive use.</description>
    <inlineHelpText>Home Care = requests for a specific patient, Acute Care = requests for Account Executive use.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Acute Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>