force-app/main/default/objects/Technical_Request__c/fields/Requesting_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entering the Account Executive Name who is the requestor of the Sales Support Request</description>
    <inlineHelpText>Click the box with the magnifying glass to the right of this field to search for and enter the name of the Requesting Account Executive.</inlineHelpText>
    <label>Requesting Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>