force-app/main/default/objects/Technical_Request__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <description>Document the name of the person who contacted Hill-Rom for the item(s) requested.</description>
    <inlineHelpText>Document the FIRST &amp; LAST Name and the relationship to the patient of the person who contacted Hill-Rom for the item(s) requested.</inlineHelpText>
    <label>Requestor Name</label>
    <type>TextArea</type>
</CustomField>