force-app/main/default/objects/Technical_Request__c/fields/Respiratory_Legal_Council__c.field-meta.xml
<CustomField>
    <fullName>Respiratory_Legal_Council__c</fullName>
    <label>Respiratory Legal Council</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>