force-app/main/default/objects/Technical_Request__c/fields/Return_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Deadline_Date__c</fullName>
    <label>Return Deadline Date</label>
    <type>Date</type>
</CustomField>