force-app/main/default/objects/Technical_Request__c/fields/Second_Disposable_Wrap_Size__c.field-meta.xml
<CustomField>
    <fullName>Second_Disposable_Wrap_Size__c</fullName>
    <label>Second Disposable Wrap Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X-Small (19-23 inches)</fullName>
            </value>
            <value>
                <fullName>Small (23-33 inches)</fullName>
            </value>
            <value>
                <fullName>Medium (33-43 inches)</fullName>
            </value>
            <value>
                <fullName>Large (43-53 inches)</fullName>
            </value>
            <value>
                <fullName>X-Large (53-67 inches)</fullName>
            </value>
            <value>
                <fullName>XX-Large (67-72 inches)</fullName>
            </value>
            <value>
                <fullName>Starter Pack (1 Small, 2 Medium, 1 Large, 1 X-Large)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>