force-app/main/default/objects/Technical_Request__c/fields/Second_Disposable_Wrap_Size_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Second_Disposable_Wrap_Size_Quantity__c</fullName>
    <inlineHelpText>Enter number of disposable wrap garments requested (1-10). All garments in singles except for Starter Pack.</inlineHelpText>
    <label>Second Disposable Wrap Size Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>