force-app/main/default/objects/Technical_Request__c/fields/Select_type_of_letter_required__c.field-meta.xml
<CustomField>
    <fullName>Select_type_of_letter_required__c</fullName>
    <label>Select type of letter required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Termination Letter</fullName>
            </value>
            <value>
                <fullName>Lost Equipment Letter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>