force-app/main/default/objects/Technical_Request__c/fields/Single_Circuit_eaches_not_case_price__c.field-meta.xml
<CustomField>
    <fullName>Single_Circuit_eaches_not_case_price__c</fullName>
    <inlineHelpText>Single Circuit eaches price - not case price divided by 5</inlineHelpText>
    <label>Single Circuit (eaches not case price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>