force-app/main/default/objects/Technical_Request__c/fields/Single_Circuit_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Single_Circuit_Pricing__c</fullName>
    <label>Single Circuit Pricing</label>
    <length>2</length>
    <type>Text</type>
</CustomField>