force-app/main/default/objects/Technical_Request__c/fields/Single_Disp_Wrap_eaches_not_case_price__c.field-meta.xml
<CustomField>
    <fullName>Single_Disp_Wrap_eaches_not_case_price__c</fullName>
    <inlineHelpText>Price for a single disposable Wrap- not the case price divided by 5.</inlineHelpText>
    <label>Single Disp Wrap (eaches not case price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>