force-app/main/default/objects/Technical_Request__c/fields/Single_Disposable_Wrap_Price__c.field-meta.xml
<CustomField>
    <fullName>Single_Disposable_Wrap_Price__c</fullName>
    <label>Single Disposable Wrap Price</label>
    <length>2</length>
    <type>Text</type>
</CustomField>