force-app/main/default/objects/Technical_Request__c/fields/Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_1__c</fullName>
    <label>Street Address 1</label>
    <type>TextArea</type>
</CustomField>