force-app/main/default/objects/Technical_Request__c/fields/Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_2__c</fullName>
    <label>Street Address 2</label>
    <type>TextArea</type>
</CustomField>