force-app/main/default/objects/Technical_Request__c/fields/Summary_of_contract_request__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_contract_request__c</fullName>
    <label>Summary of contract request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>