force-app/main/default/objects/Technical_Request__c/fields/Support_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Request_Type__c</fullName>
    <description>Category of Request submitted by RC Account Executives</description>
    <inlineHelpText>Choose the category that best describes the reason for your request.</inlineHelpText>
    <label>Support Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Status</fullName>
            </value>
            <value>
                <fullName>Monarch</fullName>
            </value>
            <value>
                <fullName>New Contact Information for Patient</fullName>
            </value>
            <value>
                <fullName>Acute Care</fullName>
            </value>
            <value>
                <fullName>Post Intake Status</fullName>
            </value>
            <value>
                <fullName>Reports/SFDC Inquiry</fullName>
            </value>
            <value>
                <fullName>Visiview/VisiVest</fullName>
            </value>
            <value>
                <fullName>Training/Retraining</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Request From Email</fullName>
            </value>
            <value>
                <fullName>HCP/HCL Set-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>