force-app/main/default/objects/Technical_Request__c/fields/Synclara_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Synclara_Accessories__c</fullName>
    <label>Synclara Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrying Case</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Battery Cover</fullName>
            </value>
            <value>
                <fullName>Circuit Cradle</fullName>
            </value>
            <value>
                <fullName>Fuse</fullName>
            </value>
            <value>
                <fullName>Foam Filter</fullName>
            </value>
            <value>
                <fullName>Power Cord</fullName>
            </value>
            <value>
                <fullName>Therapy Port Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>