force-app/main/default/objects/Technical_Request__c/fields/Therapy_Your_Way_Decals__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Your_Way_Decals__c</fullName>
    <description>Decals for device customization</description>
    <label>Therapy Your Way Decals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aquatic</fullName>
            </value>
            <value>
                <fullName>Beach</fullName>
            </value>
            <value>
                <fullName>Blank/Thought Bubbles</fullName>
            </value>
            <value>
                <fullName>Dinosaur</fullName>
            </value>
            <value>
                <fullName>Galaxy</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Nature</fullName>
            </value>
            <value>
                <fullName>Pet</fullName>
            </value>
            <value>
                <fullName>Princess</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Trucks/Cars</fullName>
            </value>
            <value>
                <fullName>Zoo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>