force-app/main/default/objects/Technical_Request__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <description>Created as a part of CR00032524</description>
    <label>Trainer Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>