force-app/main/default/objects/Technical_Request__c/fields/Type_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Account__c</fullName>
    <label>Type of Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>HHA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>