force-app/main/default/objects/Technical_Request__c/fields/Type_of_C3_Garment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_C3_Garment__c</fullName>
    <label>Type of C3 Garment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Garment</fullName>
            </value>
            <value>
                <fullName>Shell Only</fullName>
            </value>
            <value>
                <fullName>Bladder Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>