force-app/main/default/objects/Technical_Request__c/fields/Type_of_Pricing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Pricing_Agreement__c</fullName>
    <label>Type of Pricing Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 Month</fullName>
            </value>
            <value>
                <fullName>Option 1 – 36 month; fixed pricing for 12 months from the Effective Date.  Thereafter, Hill-Rom reserves the right to increase annually (not to exceed 3%)</fullName>
            </value>
            <value>
                <fullName>Option 2 – 36 month; fixed pricing for 24 months from the Effective Date.  Thereafter, Hill-Rom reserves the right to increase in final 12 months (not to exceed 5%)</fullName>
            </value>
            <value>
                <fullName>Option 3 – 36 months; fixed pricing for 36 months from the Effective Date.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>